--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="images/img.png" alt="" width="370" height="294" />
+            <img src="images/img.png" alt=" 1" width="370" height="294" />
           </li>
           <li>
-            <img src="images/img1.png" alt="" width="370" height="294" />
+            <img src="images/img1.png" alt="2" width="370" height="294" />
           </li>
           <li>
-            <img src="images/img2.png" alt="" width="370" height="294" />
+            <img src="images/img2.png" alt="3" width="370" height="294" />
           </li>
         </ul>
       </section>
@@ -81,7 +81,7 @@
         <ul>
           <li>
             <div>
-              <img src="images/img_team1.jpg" alt="" width="270" height="260" />
+              <img src="images/img_team1.jpg" alt="игор" width="270" height="260" />
 
               <h3>Ігор Дем'яненко</h3>
 
@@ -90,7 +90,7 @@
           </li>
           <li>
             <div>
-              <img src="images/img_team2.jpg" alt="" width="270" height="260" />
+              <img src="images/img_team2.jpg" alt="ольга" width="270" height="260" />
 
               <h3>Ольга Рєпіна</h3>
 
@@ -99,7 +99,7 @@
           </li>
           <li>
             <div>
-              <img src="images/img_team3.jpg" alt="" width="270" height="260" />
+              <img src="images/img_team3.jpg" alt="микола" width="270" height="260" />
 
               <h3>Микола Тарасов</h3>
 
@@ -108,7 +108,7 @@
           </li>
           <li>
             <div>
-              <img src="images/img_team4.jpg" alt="" width="270" height="260" />
+              <img src="images/img_team4.jpg" alt="михайло" width="270" height="260" />
 
               <h3>Михайло Єрмаков</h3>
 
