--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,47 +8,45 @@
   </head>
   <body>
     <header>
-      <p>
-        <a href="">logo WebStudio</a>
-      </p>
-      <nav>  
+      <a href="">logo WebStudio</a>
+
+      <nav>
         <ul>
-          <li>студія</li>
-          <li>портфоліо</li>
-          <li>контакти</li>
+          <li><a href="">студія</a></li>
+          <li><a href="">портфоліо</a></li>
+          <li><a href="">контакти</a></li>
         </ul>
       </nav>
       <ul>
-        <li>info@devstudio.com</li>
-        <li>+38 096 111 11 11</li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
 
-        <p>
-          <button>Замовити послугу</button>
-        </p>
+        <button type="button">Замовити послугу</button>
       </section>
       <section>
+        <h2>ПЕРВАГА</h2>
         <ul>
           <li>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h2>ПЛАНУВАННЯ</h2>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
@@ -81,16 +79,26 @@
         <ul>
           <li>
             <div>
-              <img src="images/img_team1.jpg" alt="игор" width="270" height="260" />
+              <img
+                src="images/img_team1.jpg"
+                alt="игор"
+                width="270"
+                height="260"
+              />
 
               <h3>Ігор Дем'яненко</h3>
 
-              <p>Product Designer</p>
+              <p lang="en">Product Designer</p>
             </div>
           </li>
           <li>
             <div>
-              <img src="images/img_team2.jpg" alt="ольга" width="270" height="260" />
+              <img
+                src="images/img_team2.jpg"
+                alt="ольга"
+                width="270"
+                height="260"
+              />
 
               <h3>Ольга Рєпіна</h3>
 
@@ -99,7 +107,12 @@
           </li>
           <li>
             <div>
-              <img src="images/img_team3.jpg" alt="микола" width="270" height="260" />
+              <img
+                src="images/img_team3.jpg"
+                alt="микола"
+                width="270"
+                height="260"
+              />
 
               <h3>Микола Тарасов</h3>
 
@@ -108,7 +121,12 @@
           </li>
           <li>
             <div>
-              <img src="images/img_team4.jpg" alt="михайло" width="270" height="260" />
+              <img
+                src="images/img_team4.jpg"
+                alt="михайло"
+                width="270"
+                height="260"
+              />
 
               <h3>Михайло Єрмаков</h3>
 
@@ -119,15 +137,22 @@
       </section>
     </main>
     <footer>
-      <p>
-        <a href="">logo WebStudio</a>
-      </p>
+      <a href="">logo WebStudio</a>
+
       <ul>
-        <li>
-          <address>м. Київ, пр-т Лесі Українки, 26</address>
-        </li>
-        <li>info@devstudio.com</li>
-        <li>+38 096 111 11 11</li>
+        <address>
+          <li>
+            <a
+              href="https://goo.gl/maps/e7AEsHHhA3SEjv6j6"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              м. Київ, пр-т Лесі Українки, 26
+            </a>
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </address>
       </ul>
     </footer>
   </body>
