--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
       <a href="">logo WebStudio</a>
       <address>
       <ul>
-        
-          <li>
+                  <li>
             <a
               href="https://goo.gl/maps/e7AEsHHhA3SEjv6j6"
               target="_blank"
@@ -150,10 +149,9 @@
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com.ua</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        
-      </ul>
+              </ul>
     </address>
     </footer>
   </body>
